--- a/projetc/src/main/resources/application.properties
+++ b/projetc/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.application.name=projetc
-
-spring.datasource.url=jdbc:mysql://localhost:3306/nome-banco
+spring.datasource.url=jdbc:mysql://localhost:3306/conectavel_api
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
