--- a/projetc/src/main/resources/application.properties
+++ b/projetc/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/conectavel-api
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create-drop
 
