--- a/projetc/src/main/resources/application.properties
+++ b/projetc/src/main/resources/application.properties
@@ -1,5 +1,9 @@
+# application.properties
+
 spring.datasource.url=jdbc:mysql://52.90.168.163:3306/conectavelapi
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
