--- a/projetc/Dockerfile
+++ b/projetc/Dockerfile
@@ -1,7 +1,12 @@
 FROM ubuntu:latest
-LABEL authors="rodri"
+RUN apt-get update
+RUN apt-get install openjdk-17-jdk -y
+COPY . .
+RUN ./gradlew bootJar --no-daemon
 
-ARG JAR_FILE=target/*.jar
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+FROM openjdk:17-jdk-slim
+EXPOSE 8080
+COPY --from-build /build/libs/demo-1.jar app.jar
+
+ENTRYPOINT ["java","-jar","app.jar"]
 
