--- a/projetc/Dockerfile
+++ b/projetc/Dockerfile
@@ -1,12 +1,7 @@
 FROM ubuntu:latest
-RUN apt-get update
-RUN apt-get install openjdk-17-jdk -y
-COPY . .
-RUN ./gradlew bootJar --no-daemon
-
-FROM openjdk:17-jdk-slim
+VOLUME /tmp
+COPY target/*.jar app.jar
+ENTRYPOINT ["java","-jar","/app.jar"]
 EXPOSE 8080
-COPY --from-build /build/libs/demo-1.jar app.jar
 
-ENTRYPOINT ["java","-jar","app.jar"]
 
